--- a/LeagueScheduler31/App/admin/views/leagues.html
+++ b/LeagueScheduler31/App/admin/views/leagues.html
@@ -31,6 +31,7 @@
                 <a data-bind="attr: { href: '#leagues/' + id() + '/teams' }" class="btn btn-success">Configure</a>
                 <button class="btn btn-warning" data-bind="click: publish">Publish</button>
                 <button class="btn btn-danger" data-bind="click: $parent.deleteItem">Delete</button>
+                <a class="btn btn-link" target="_blank" data-bind="attr: { href: '/home/league/' + id() }">View League Site</a>
             </td>
         </tr>
     </script>
