added Home page

--- a/LeagueScheduler31/App/admin/views/adminhome.html
+++ b/LeagueScheduler31/App/admin/views/adminhome.html
@@ -3,7 +3,7 @@
     <div class="jumbotron">
         <div data-bind="visible: hasAdminClaim">
             <p>
-                To start using League Lineup, configure your <a href="#leagues">League</a> first. Once you select your league, you will configure
+                To start using Elite Schedule, configure your <a href="#leagues">League</a> first. Once you select your league, you will configure
                 <u>Teams</u> and <u>Games</u> for your league.
             </p>
             <p>
