--- a/LeagueScheduler31/App/admin/views/shell.html
+++ b/LeagueScheduler31/App/admin/views/shell.html
@@ -10,7 +10,7 @@
                 </button>
                 <a class="navbar-brand" data-bind="attr: { href: router.navigationModel()[0].hash }">
                     <i class="icon-home"></i>
-                    <span>League Lineup Admin</span>
+                    <span>Elite Schedule Admin</span>
                 </a>
             </div>
 
