--- a/LeagueScheduler31/App/views/shell.html
+++ b/LeagueScheduler31/App/views/shell.html
@@ -9,7 +9,7 @@
                 </button>
                 <a class="navbar-brand" data-bind="attr: { href: router.navigationModel()[0].hash }">
                     <i class="icon-home"></i>
-                    <span>League Lineup</span>
+                    <span>Elite Schedule</span>
                 </a>
             </div>
 
