--- a/LeagueScheduler31/Views/Account/Login.cshtml
+++ b/LeagueScheduler31/Views/Account/Login.cshtml
@@ -2,7 +2,7 @@
 
 <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-header">
-        <a href="#" class="navbar-brand">League Lineup Admin</a>
+        <a href="#" class="navbar-brand">Elite Schedule Admin</a>
     </div>
 </div>
 
