--- a/LeagueScheduler31/Views/Shared/_Layout.cshtml
+++ b/LeagueScheduler31/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>League Lineup</title>
+    <title>Elite Schedule</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
@@ -24,7 +24,7 @@
 
     <div id="footer">
         <div class="container">
-            <span class="pull-right text-info credit">League Lineup - © @DateTime.Now.Year Steve Michelotti</span>
+            <span class="pull-right text-info credit">Elite Schedule - © @DateTime.Now.Year Steve Michelotti</span>
         </div>
     </div>
 
