--- a/LeagueScheduler31/Views/Shared/_splash.cshtml
+++ b/LeagueScheduler31/Views/Shared/_splash.cshtml
@@ -9,7 +9,7 @@
     </noscript>
     
     <div class="message">
-        League Lineup
+        Elite Schedule
     </div>
     <i class="fa fa-spinner fa-spin fa-4x"></i>
 </div>
