--- a/LeagueScheduler31/App/views/standings.html
+++ b/LeagueScheduler31/App/views/standings.html
@@ -1,4 +1,28 @@
 ﻿<section>
-    <h3 class="page-title">Standings</h3>
+    <h2 class="page-title">Standings</h2>
 
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Team</th>
+                <th>Won</th>
+                <th>Lost</th>
+                <th>Pct</th>
+                <th>PF</th>
+                <th>PA</th>
+                <th>Diff</th>
+            </tr>
+        </thead>
+        <tbody data-bind="foreach: standings">
+            <tr>
+                <td><a data-bind="text: teamName, attr: { href: '#!teams/' + teamName }"></a></td>
+                <td data-bind="text: wins"></td>
+                <td data-bind="text: losses"></td>
+                <td data-bind="text: winningPct"></td>
+                <td data-bind="text: pointsFor"></td>
+                <td data-bind="text: pointsAgainst"></td>
+                <td data-bind="text: pointsDiff"></td>
+            </tr>
+        </tbody>
+    </table>
 </section>
