--- a/LeagueScheduler31/App/views/teams.html
+++ b/LeagueScheduler31/App/views/teams.html
@@ -4,7 +4,7 @@
 
     <div class="container" data-bind="foreach: teams">
         <div class="row">
-            <a data-bind="text: name, attr: { href: '#!teams/'+name }"></a>
+            <a class="btn btn-link" data-bind="text: name, attr: { href: '#!teams/'+name }"></a>
         </div>
     </div>
 </section>
