--- a/LeagueScheduler31/App/views/home.html
+++ b/LeagueScheduler31/App/views/home.html
@@ -1,6 +1,6 @@
 ﻿<section>
     <h2 class="page-title" data-bind="text: 'Welcome to ' + leagueName + ' league'"></h2>
-    <h3 data-bind="text: 'This site contains complete schedule information for the ' + leagueName + ' league'"></h3>
+    <h3 data-bind="text: 'This site contains complete schedule information for the ' + leagueName"></h3>
 
     <div>
         <p>&nbsp;</p>
@@ -14,7 +14,7 @@
         </p>
         <p>&nbsp;</p>
         <p>
-            All questions should be directed towards your coach or to the official <a href="http://hyba.org/">HYBA organization</a>.
+            All questions should be directed towards your coach.
         </p>
         <p>&nbsp;</p>
         <p>
