--- a/LeagueScheduler31/App/admin/views/teams.html
+++ b/LeagueScheduler31/App/admin/views/teams.html
@@ -45,6 +45,7 @@
 
     <script id="team-editTempl" type="text/html">
         <tr>
+            <td data-bind="text: $index() + 1"></td>
             <td>
                 <input class="form-control" data-bind="value: name"/>
             </td>
