fixed home screen

--- a/LeagueScheduler31/App/views/home.html
+++ b/LeagueScheduler31/App/views/home.html
@@ -1,11 +1,11 @@
 ﻿<section>
-    <h2 class="page-title" data-bind="text: 'Welcome to ' + leagueName + ' league'"></h2>
+    <h2 class="page-title" data-bind="text: 'Welcome to ' + leagueName"></h2>
     <h3 data-bind="text: 'This site contains complete schedule information for the ' + leagueName"></h3>
 
     <div>
         <p>&nbsp;</p>
         <p>
-            Use the nav bar at the top to view the <a href="/#!teams">schedule by team</a> and <a href="/#!locations">schedule by location</a> (as well as directions).
+            Use the nav bar at the top to view the <a href="#!teams">schedule by team</a> and <a href="#!locations">schedule by location</a> (as well as directions).
         </p>
         <p>&nbsp;</p>
         <p>
