added scores to team schedule

--- a/LeagueScheduler31/App/views/teamschedule.html
+++ b/LeagueScheduler31/App/views/teamschedule.html
@@ -13,9 +13,8 @@
                     <a data-bind="text: location, attr: { href: '#!locations/' + location }"></a>
                     (<a data-bind="attr: { href: locationUrl }">Map</a>)
                 </td>
-                <td data-bind="text: $parent.scoreDisplay($data)">
-
-                </td>
+                <!--<td data-bind="text: $parent.scoreDisplay($data)"></td>-->
+                <td data-bind="text: scoreDisplay"></td>
             </tr>
         </tbody>
     </table>
