--- a/LeagueScheduler31/App/admin/views/leagues.html
+++ b/LeagueScheduler31/App/admin/views/leagues.html
@@ -29,7 +29,7 @@
             <td>
                 <a data-bind="attr: { href: '#leagues/' + id() + '/teams' }" class="btn btn-success">Configure</a>
                 <button class="btn btn-info" data-bind="click: $parent.editItem">Edit</button>
-                <button class="btn btn-warning" data-bind="click: publish, enable: publishEnabled">Publish</button>
+                <button class="btn btn-warning" data-bind="visible: isDirty, click: publish, enable: publishEnabled">Publish</button>
                 <button class="btn btn-danger" data-bind="click: $parent.deleteItem">Delete</button>
                 <a class="btn btn-link" target="_blank" data-bind="attr: { href: '/home/league/' + id() }">View League Site</a>
             </td>
