--- a/LeagueScheduler31/App/views/teams.html
+++ b/LeagueScheduler31/App/views/teams.html
@@ -3,8 +3,12 @@
     <h3>Click on a team below to view schedule by team.</h3>
 
     <div class="container" data-bind="foreach: teams">
+        <h3 data-bind="text: divisionName"></h3>
+        
+        <!--ko foreach: divisionTeams -->
         <div class="row">
             <a class="btn btn-link" data-bind="text: name, attr: { href: '#!teams/'+name }"></a>
         </div>
+        <!--/ko-->
     </div>
 </section>
