fixed locations textboxes

--- a/LeagueScheduler31/App/admin/views/locations.html
+++ b/LeagueScheduler31/App/admin/views/locations.html
@@ -45,10 +45,10 @@
     <script id="location-editTempl" type="text/html">
         <tr>
             <td>
-                <input data-bind="value: name" />
+                <input class="form-control" data-bind="value: name" />
             </td>
             <td>
-                <input data-bind="value: link" />
+                <input class="form-control" data-bind="value: link" />
             </td>
             <td>
                 <button class="btn btn-primary" data-bind="click: $parent.saveItem">Save</button>
