fixed link on full schedule screen

--- a/LeagueScheduler31/App/views/fullschedule.html
+++ b/LeagueScheduler31/App/views/fullschedule.html
@@ -10,7 +10,7 @@
                     <a data-bind="text: team1, attr: { href: '#!teams/' + team1 }"></a>
                     <span data-bind="visible: team1Score, text: '(' + team1Score + ')', css: { 'bold-text text-success': team1Score > team2Score }"></span>
                     <span> vs. </span>
-                    <a data-bind="text: team2, attr: { href: '#/teams/' + team2 }"></a>
+                    <a data-bind="text: team2, attr: { href: '#!teams/' + team2 }"></a>
                     <span data-bind="visible: team2Score, text: '(' + team2Score + ')', css: { 'bold-text text-success': team2Score > team1Score }"></span>
                 </td>
                 <td>
