added back IE 8 and below warning

--- a/LeagueScheduler31/Views/Shared/_Layout.cshtml
+++ b/LeagueScheduler31/Views/Shared/_Layout.cshtml
@@ -22,6 +22,15 @@
         @RenderBody()
     </div>
 
+    <!--[if lt IE 9]>
+                <div class="alert alert-danger" style="position: absolute; top: 50px;">
+                    We're sorry, your browser is outdated and not supported by this site. :( Please use a later version of Internet Explorer, Google Chrome, Firefox, or Safari.
+                </div>
+              <div style=' clear: both; height: 59px; padding:0 0 0 15px; position: absolute; top: 100px;'>
+                  <a href="http://windows.microsoft.com/en-US/internet-explorer/products/ie/home?ocid=ie6_countdown_bannercode"><img src="http://storage.ie6countdown.com/assets/100/images/banners/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today." /></a>
+              </div>
+            <![endif]-->
+
     <div id="footer">
         <div class="container">
             <span class="pull-right text-info credit">Elite Schedule - © @DateTime.Now.Year Steve Michelotti</span>
