Added variable width for admin

--- a/LeagueScheduler31/Views/Shared/_Layout.cshtml
+++ b/LeagueScheduler31/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 <body>
     @Html.AntiForgeryToken()
 
-    <div id="applicationHost" class="container body-content">
+    <div id="applicationHost" class="container body-content @ViewBag.ExtraAppHostCss">
         @RenderBody()
     </div>
 
