--- a/LeagueScheduler31/App/admin/views/shell.html
+++ b/LeagueScheduler31/App/admin/views/shell.html
@@ -42,5 +42,5 @@
         </div>
     </div>
 
-    <div class="container page-host" data-bind="router: { transition:'entrance', cacheViews:true }"></div>
+    <div class="container admin-appHost page-host" data-bind="router: { transition:'entrance', cacheViews:true }"></div>
 </div>
