--- a/LeagueScheduler31/Content/custom.css
+++ b/LeagueScheduler31/Content/custom.css
@@ -26,7 +26,7 @@
 
 .page-host {
     position: relative;
-    top: 40px;
+    /*top: 40px;*/
 }
 
 .navbar-fixed-top .navbar-inner {
@@ -83,9 +83,10 @@ body {
     background-color: #f5f5f5;
 }
 
+
 .container {
     width: auto;
-    max-width: 1250px;
+    max-width: 900px;
     padding: 0 15px;
 }
 
@@ -93,11 +94,11 @@ body {
         margin: 20px 0;
     }
 
-/*
-    .page-host{
-    padding-bottom: 40px;
+.admin-appHost {
+    width: auto;
+    max-width: 1250px;
+    padding: 0 15px;
 }
-*/
 
 
 .vertical-container {
