tweaked rules/home

--- a/LeagueScheduler31/App/views/home.html
+++ b/LeagueScheduler31/App/views/home.html
@@ -7,16 +7,16 @@
         <p>
             Use the nav bar at the top to view the <a href="#!teams">schedule by team</a> and <a href="#!locations">schedule by location</a> (as well as directions).
         </p>
-        <p>&nbsp;</p>
+        
         <p>
-            Only the first 2 weeks of the season have been scheduled. After reviewing the results of the first 2 weeks, the remaining 6 weeks will be scheduled to ensure
+            Only the first 2 weeks of the season have been scheduled. After reviewing the results of the first 2 weeks, the remaining weeks will be scheduled to ensure
             as much parity as possible and to avoid blowouts by the weakest teams having to play against the strongest teams.
         </p>
-        <p>&nbsp;</p>
+        
         <p>
             All questions should be directed towards your coach.
         </p>
-        <p>&nbsp;</p>
+        
         <p>
             Have a great season!
         </p>
