--- a/LeagueScheduler31/App/views/rules.html
+++ b/LeagueScheduler31/App/views/rules.html
@@ -5,7 +5,7 @@
     <ul>
         <li>The first team listed on the schedule is considered HOME and should wear white (light). Second team listed is away and wears dark jerseys.</li>
         <li>
-            Home Team Provides game Ball – It should be a NFHS approved 29.5 indoor game ball.<br />
+            Home Team Provides game Ball – It should be a NFHS approved 29.5 indoor game ball. If the Home team does not have a NFHS approved ball the Away team can provide a NFHS game ball.<br />
             <u>JV League only</u>: If two 6th grade teams play each other, they can use a 28.5 ball.
         </li>
         <li>
