--- a/LeagueScheduler31/App/views/teamschedule.html
+++ b/LeagueScheduler31/App/views/teamschedule.html
@@ -2,11 +2,21 @@
     <h2 data-bind="text: title"></h2>
 
     <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Time</th>
+                <th></th>
+                <th>Opponent</th>
+                <th>Location</th>
+                <th>Result</th>
+            </tr>
+        </thead>
         <tbody data-bind="foreach: games">
             <tr>
                 <td data-bind="shortDate: time"></td>
                 <td data-bind="shortTime: time"></td>
-                <td><span data-bind="ifnot: isHomeTeam">at</span></td>
+                <td data-bind="text: homeAway"></td>
                 <td>
                     <a data-bind="text: opponent, attr: { href: '#!teams/' + opponent }"></a>
                 </td>
