--- a/LeagueScheduler31/App/views/shell.html
+++ b/LeagueScheduler31/App/views/shell.html
@@ -7,8 +7,9 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" data-bind="attr: { href: router.navigationModel()[0].hash }">
-                    <i class="icon-home"></i>
+                <!--<a class="navbar-brand" data-bind="attr: { href: router.navigationModel()[0].hash }">-->
+                <a class="navbar-brand" href="/">
+                    <!--<i class="glyphicon glyphicon-home"></i>-->
                     <span>Elite Schedule</span>
                 </a>
             </div>
