--- a/LeagueScheduler31/App/views/teams.html
+++ b/LeagueScheduler31/App/views/teams.html
@@ -4,11 +4,23 @@
 
     <div class="container" data-bind="foreach: teams">
         <h3 data-bind="text: divisionName"></h3>
-        
-        <!--ko foreach: divisionTeams -->
-        <div class="row">
-            <a class="btn btn-link" data-bind="text: name, attr: { href: '#!teams/'+name }"></a>
-        </div>
-        <!--/ko-->
+
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>Team</th>
+                    <th>Coach</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: divisionTeams">
+                <tr>
+                    <td>
+                        <a class="btn btn-link" data-bind="text: name, attr: { href: '#!teams/'+name }"></a>
+                    </td>
+                    <td data-bind="text: coach"></td>
+                </tr>
+            </tbody>
+        </table>
+
     </div>
 </section>
