added league name to every screen

--- a/LeagueScheduler31/App/views/fullschedule.html
+++ b/LeagueScheduler31/App/views/fullschedule.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2>Full Schedule</h2>
+    <h2 data-bind="text: 'Full Schedule - ' + leagueName()"></h2>
 
     <table class="table table-striped">
         <thead>
