--- a/LeagueScheduler31/App/views/rules.html
+++ b/LeagueScheduler31/App/views/rules.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 class="page-title">League Rules</h2>
+    <h2 class="page-title" data-bind="text: 'League Rules - ' + leagueName()"></h2>
     <h3>HS Federation rules will be used except where noted:</h3>
 
     <ul>
