--- a/LeagueScheduler31/App/views/standings.html
+++ b/LeagueScheduler31/App/views/standings.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 class="page-title">Standings</h2>
+    <h2 class="page-title" data-bind="text: 'Standings - ' + leagueName()"></h2>
 
     <div class="container" data-bind="foreach: standings">
         <h3 data-bind="text: divisionName"></h3>
