--- a/LeagueScheduler31/App/views/teams.html
+++ b/LeagueScheduler31/App/views/teams.html
@@ -1,5 +1,6 @@
 ﻿<section>
-    <h2 class="page-title">Teams</h2>
+    <!--<h2 class="page-title">Teams</h2>-->
+    <h2 class="page-title" data-bind="text: 'Teams - ' + leagueName()"></h2>
     <h3>Click on a team below to view schedule by team.</h3>
 
     <div class="container" data-bind="foreach: teams">
