--- a/LeagueScheduler31/App/views/locations.html
+++ b/LeagueScheduler31/App/views/locations.html
@@ -1,5 +1,5 @@
 ﻿<section>
-    <h2 class="page-title">Locations</h2>
+    <h2 class="page-title" data-bind="text: 'Locations - ' + leagueName()"></h2>
     <h3>Click on a location below to view schedule by location.</h3>
 
     <div class="container" data-bind="foreach: locations">
