change home screen

--- a/LeagueScheduler31/App/views/home.html
+++ b/LeagueScheduler31/App/views/home.html
@@ -20,6 +20,14 @@
         <p>
             Have a great season!
         </p>
+        <p>
+            <b><u>Inclement weather: </u></b>
+            Inclement weather procedure depends on your location. Based on your game location, call one of these numbers:
+            <ul>
+                <li>Meadowbrook, Roger Carter, and North Laurel: 410-313-4452 (option 2)</li>
+                <li>One of the Howard County Schools: 410-313-6827</li>
+            </ul>
+        </p>
     </div>
 
 </section>
