tweaked home page message

--- a/LeagueScheduler31/App/views/home.html
+++ b/LeagueScheduler31/App/views/home.html
@@ -9,8 +9,8 @@
         </p>
         
         <p>
-            Only the first 2 weeks of the season have been scheduled. After reviewing the results of the first 2 weeks, the remaining weeks will be scheduled to ensure
-            as much parity as possible and to avoid blowouts by the weakest teams having to play against the strongest teams.
+            The schedule (and divisions) is organized to ensure as much parity as possible and to avoid blowouts by the weakest teams having to play against the strongest teams.
+            The last regular season games will be the weekend of February 21-22. The playoffs will be the weekends of Feburary 28-March 1 and March 7-8.
         </p>
         
         <p>
