adding initial home/rules screen to admin

--- a/LeagueScheduler31/App/admin/views/content-edit.html
+++ b/LeagueScheduler31/App/admin/views/content-edit.html
@@ -10,10 +10,10 @@
             <button class="btn btn-info" data-toggle="modal" data-target="#markdownHelp">Help</button>
         </div>
 
-        <textarea class="form-control" data-bind="value: rulesText, valueUpdate: 'afterkeydown'" style="height: 350px"></textarea>
+        <textarea class="form-control" data-bind="value: contentText, valueUpdate: 'afterkeydown'" style="height: 350px"></textarea>
         <h3>Live Preview:</h3>
         <hr />
-        <div data-bind="markdown: rulesText"></div>
+        <div data-bind="markdown: contentText"></div>
     </div>
 
 
