--- a/LeagueScheduler31/Views/Admin/Index.cshtml
+++ b/LeagueScheduler31/Views/Admin/Index.cshtml
@@ -6,4 +6,5 @@
 
 @section Scripts {
     <script type="text/javascript" src="~/Scripts/require.js" data-main="App/admin/admin-main"></script>
+    <script type="text/javascript" src="~/Scripts/showdown.js"></script>
 }
