--- a/LeagueScheduler31/App/views/rules.html
+++ b/LeagueScheduler31/App/views/rules.html
@@ -1,38 +1,4 @@
 ﻿<section>
-    <h2 class="page-title" data-bind="text: 'League Rules - ' + leagueName()"></h2>
-    <h3>HS Federation rules will be used except where noted:</h3>
-
-    <ul>
-        <li>The first team listed on the schedule is considered HOME and should wear white (light). Second team listed is away and wears dark jerseys.</li>
-        <li>
-            Home Team Provides game Ball – It should be a NFHS approved 29.5 indoor game ball. If the Home team does not have a NFHS approved ball the Away team can provide a NFHS game ball.<br />
-            <u>JV League only</u>: If two 6th grade teams play each other, they can use a 28.5 ball.
-        </li>
-        <li>
-            <b>For games not at Meadowbrook, each team must provide a team representative at the scorer’s table for their game.  One team covers the book; the other team covers the clock.</b>
-            Score table persons are provided at Meadowbrook.
-        </li>
-        <li>20 minute halves.  Running Clock except last 1 minute of first half, last 2 minutes of game and all time outs.</li>
-        <li>Two 45 second timeouts per half -   Timeouts don’t carry-over from 1st half to 2nd half.</li>
-        <li>
-            <b>Free Throw Bonus:</b>
-            We’re trying to minimize wasting playing time shooting fouls shots while the clock runs.<br />
-            <b>1st half</b>, NO 1-n-1 bonus at 7 fouls.  2 shot bonus will be shot at 10th foul.<br />
-            <b>2nd Half</b>, Same as first half, except when we get to 2 minutes and we are in “stop clock” mode.  So, 2 minutes or less in 2nd half, we go to 1-n-1 bonus at 7 fouls.<br />
-            So if there are 3 minutes left in the 2nd half, with 7, 8 or 9 fouls, we are not shooting 1-n-1.  If there are 2 minutes or less in the second half with 7, 8 or 9 fouls, we “are” shooting 1-n-1.
-        </li>
-        <li>No pressing or half-court trapping after lead reaches 20 points.  Team gets 2 warnings.  On third violation, a Team Technical assessed (not counted against individual player) where offense get automatic 2 points and ball at half court.</li>
-        <li>2 behavior related technical fouls result in removal from current and next game.</li>
-        <li>No technical fouls for book errors.  Just correct the mistake and move on.</li>
-        <li>Teams can start game with 4 players.  If you have 4 players available at game time, the game must start.</li>
-        <li>
-            <b>Overtime</b> - One 2 minute OT.  Teams get one additional timeout in OT, two maximum.
-            If still tied after OT, the 10 players on the court immediately go into a “foul shooting shootout.”  Players from each team alternate shooting one foul sho,t one player at a time.  All ten players shoot.  If tied after all 10 players shoot, go back to first players until one team makes it and the other misses.  This is similar to a soccer shootout.  This is only for regular season.  Normal O/Ts in playoffs, not shootout.
-        </li>
-    </ul>
-
-    <p>
-        The League Commissioner, will settle all disputes and rule interpretations.
-        If Bill Nap or Steve Michelotti can’t be reached, the lead official will settle dispute or rules.
-    </p>
+    <h2 class="page-title" data-bind="text: 'League Rules - ' + leagueName"></h2>
+    <div data-bind="markdown: rulesContent"></div>
 </section>
