added slots screen

--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -54,11 +54,13 @@
     <script src="/app-ngadmin/services/elite-api.service.js"></script>
     <script src="~/app-ngadmin/services/dialogs.service.js"></script>
     <script src="~/app-ngadmin/services/app-spinner.service.js"></script>
+    <script src="~/app-ngadmin/slots/slots-initial-data.service.js"></script>
+
     <script src="~/app-ngadmin/shared/confirm-modal.controller.js"></script>
     <script src="~/app-ngadmin/directives/spinner.directive.js"></script>
     <script src="~/app-ngadmin/directives/automaticfocus.directive.js"></script>
 
-    <script src="/app-ngadmin/slots/slots.ctrl.js"></script>
+    <script src="~/app-ngadmin/slots/slots.controller.js"></script>
     <script src="~/app-ngadmin/teams/teams.controller.js"></script>
     <script src="~/app-ngadmin/teams/edit-team.controller.js"></script>
     <script src="~/app-ngadmin/teams/import-teams.controller.js"></script>
