added initial generation functionality

--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -55,6 +55,7 @@
     <script src="~/app-ngadmin/services/dialogs.service.js"></script>
     <script src="~/app-ngadmin/services/app-spinner.service.js"></script>
     <script src="~/app-ngadmin/slots/slots-initial-data.service.js"></script>
+    <script src="~/app-ngadmin/generation/generation.service.js"></script>
 
     <script src="~/app-ngadmin/shared/confirm-modal.controller.js"></script>
     <script src="~/app-ngadmin/directives/spinner.directive.js"></script>
