initial commit for revamped games screen

--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -56,6 +56,11 @@
     <script src="~/app-ngadmin/services/app-spinner.service.js"></script>
     <script src="~/app-ngadmin/slots/slots-initial-data.service.js"></script>
     <script src="~/app-ngadmin/generation/generation.service.js"></script>
+    <script src="~/app-ngadmin/games/games.controller.js"></script>
+    <script src="~/app-ngadmin/games/edit-game.controller.js"></script>
+    <script src="~/app-ngadmin/games/edit-scores.controller.js"></script>
+    <script src="~/app-ngadmin/games/games-initial-data.service.js"></script>
+    <script src="~/app-ngadmin/services/utils.service.js"></script>
 
     <script src="~/app-ngadmin/shared/confirm-modal.controller.js"></script>
     <script src="~/app-ngadmin/directives/spinner.directive.js"></script>
