added division to team dropdown

--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -71,6 +71,7 @@
     <script src="~/app-ngadmin/teams/teams.controller.js"></script>
     <script src="~/app-ngadmin/teams/edit-team.controller.js"></script>
     <script src="~/app-ngadmin/teams/import-teams.controller.js"></script>
+    <script src="~/app-ngadmin/teams/special-requests-controller.js"></script>
     <!-- endinject -->
 </body>
 </html>
