--- a/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
+++ b/LeagueScheduler31/Views/Shared/_LayoutNGAdmin.cshtml
@@ -6,6 +6,7 @@
     <title>Elite Schedule Admin</title>
     <!-- inject:css -->
     @*<link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.min.css">*@
+    <link rel="stylesheet" href="/lib/fullcalendar/fullcalendar.css" />
     <link rel="stylesheet" href="/lib/bootstrap/dist/css-themes/bootstrap.united.min.css" />
     @*<link rel="stylesheet" href="/lib/angular-ui-select/dist/select.min.css">*@
     @*<link rel="stylesheet" href="~/lib/angular-ui-grid/ui-grid.min.css"/>*@
@@ -27,6 +28,8 @@
     </div>
 
     <!-- inject:js -->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-ui/ui/jquery-ui.js"></script>
     <script src="/lib/angular/angular.min.js"></script>
     <script src="/lib/angular-route/angular-route.min.js"></script>
     <script src="/lib/angular-animate/angular-animate.min.js"></script>
@@ -38,6 +41,8 @@
     @*<script src="~/lib/angular-ui-grid/ui-grid.min.js"></script>*@
     <script src="~/lib/angular-ui-grid/ui-grid.v3.0.0-rc.12-c280b35.min.js"></script>
     <script src="~/lib/csv-js/csv.js"></script>
+    <script src="~/lib/angular-ui-calendar/src/calendar.js"></script>
+    <script src="~/lib/fullcalendar/fullcalendar.min.js"></script>
 
     @*<script src="/lib/angular-ui-select/dist/select.min.js"></script>*@
     <script src="/lib/showdown/compressed/showdown.js"></script>
