--- a/LeagueScheduler31/app-ngadmin/layout/shell.html
+++ b/LeagueScheduler31/app-ngadmin/layout/shell.html
@@ -44,7 +44,7 @@
         <div class="page-splash-message page-splash-message-subtle">{{vm.spinnerMessage}}</div>
     </div>
 
-    <div ui-view id="ng-view" class="container slide-animation admin-content"></div>
+    <div ui-view id="ng-view" autoscroll="true" class="container slide-animation admin-content"></div>
 
     <!--<div id="splash-page" data-ng-show="false">
         <div class="page-splash">
